--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 
 
-Dumont News 
+<h1>Dumont News</h1>
 
-Nesta sexta feira dia 20 de Outubro, na cidade de Santa Cruz de
+<p>Nesta sexta feira dia 20 de Outubro, na cidade de Santa Cruz de
 Monte Castelo aconteceu uma pedalada contra a polio 
 que nada mais é uma doença que atrofia os nervos, 
 um lindo projeto que contou com a participação 
@@ -19,8 +19,7 @@ com o uniforme do colégio, após a pedalada
 que durou em média 30 minutos, no final
 varios sorteios aconteceram, um total de 6 sorteios para ser
 exato, todos de 50 reais, isso fez com que os alunos ficassem
-mais empolgados 
-
+mais empolgados</p>
 
 
 
