--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ varios sorteios aconteceram, um total de 6 sorteios para ser
 exato, todos de 50 reais, isso fez com que os alunos ficassem
 mais empolgados</p>
 
+<img src="Dumont.png">
+
 
 
 
