--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ exato, todos de 50 reais, isso fez com que os alunos ficassem
 mais empolgados</p>
 
 
-                                                            <img src="Dumont.png">
+                                                            <img src="Dumont_cropped.png">
 
 
 
