--- a/index.html
+++ b/index.html
@@ -10,19 +10,13 @@
 
 <img src="Dumont_cropped.png">
 
+<h1>Coluna Adryann Ferreira</h1
 
 
-<p>Nesta sexta feira dia 20 de Outubro, na cidade de Santa Cruz de
-Monte Castelo aconteceu uma pedalada contra a polio 
-que nada mais é uma doença que atrofia os nervos, 
-um lindo projeto que contou com a participação 
-do Colégio Estadual Santos Dumont, todos os alunos
-com o uniforme do colégio, após a pedalada
-que durou em média 30 minutos, no final
-varios sorteios aconteceram, um total de 6 sorteios para ser
-exato, todos de 50 reais, isso fez com que os alunos ficassem
-mais empolgados</p>
+<p>10 de Novembro De 2023</p>
 
+<p>Hoje no Colégio Estadual Santos Dumont aconteceu uma campionato de Xadres,contando com a presença de Alunos de outras escolas,
+     como, Escola Municipal Anibal Israel Liutti, Brasileirinho e Ivaina, algo bem fora da rotina, </p>
 
                                                             
 
