--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <p>Hoje no Colégio Estadual Santos Dumont aconteceu uma campeonato de Xadres,contando com a presença de Alunos de outras escolas,
      como, Escola Municipal Anibal Israel Liutti, Brasileirinho e Ivaina, algo bem fora da rotina, após esse campeonato os alunos que ficaram em até 3º 
-     lugar ganharam medalhas,siga a lista abaixo dos ganhadores
+     lugar ganharam medalhas,siga a lista abaixo dos ganhadores.
     </p>
 <p>1º Lugar:Estevão (Aluno do Santos Dumont)</p>
 <p>2º Lugar:Leticia (Aluna do Santos dumont)</p>         
