Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <p>10 de Novembro De 2023</p>
 
-<p>Hoje no Colégio Estadual Santos Dumont aconteceu uma campeonato de Xadres,contando com a presença de Alunos de outras escolas,
+<p>Hoje no Colégio Estadual Santos Dumont aconteceu um campeonato de Xadres,contando com a presença de Alunos de outras escolas,
      como, Escola Municipal Anibal Israel Liutti, Brasileirinho e Ivaina, algo bem fora da rotina, após esse campeonato os alunos que ficaram em até 3º 
      lugar ganharam medalhas,siga a lista abaixo dos ganhadores.
     </p>
