--- a/index.html
+++ b/index.html
@@ -12,8 +12,23 @@
 
 <h1>Coluna Adryann Cruzarolli</h1
 
+  
+    13 de Novembro de 2023
 
-<p>10 de Novembro De 2023</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <p>10 de Novembro De 2023</p>
 
 <p>Hoje no Colégio Estadual Santos Dumont aconteceu um campeonato de Xadres,contando com a presença de Alunos de outras escolas,
      como, Escola Municipal Anibal Israel Liutti, Brasileirinho e Ivaina, algo bem fora da rotina, após esse campeonato os alunos que ficaram em até 3º 
