--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
 <img src="Dumont_cropped.png">
 
-<h1>Coluna Adryann Cruzarolli</h1
-
-               <h1>campeonatos</h1>
+<h1>Coluna Adryann Cruzarolli</h1>
+<h1>campeonatos</h1>
     
 
 
