--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <img src="Dumont_cropped.png">
 
 <h1>Coluna Adryann Cruzarolli</h1>
-<h1>Campeonatos</h1>
+<h1>Tênis de Mesa</h1>
     
 <p>13 de Novembro 2023</p>
 
@@ -29,7 +29,8 @@
 
 
 
-
+    <h1>Xadres</h1>
+    
     <p>10 de Novembro De 2023</p>
 
 <p>Hoje no Colégio Estadual Santos Dumont aconteceu um campeonato de Xadrez,contando com a presença de Alunos de outras escolas,
