--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<img src="Dumont_cropped.png">               <img src="logo.png">
+<img src="Dumont_cropped.png">               <img src="logo 2.png">
 
 <h1>Coluna Adryann Cruzarolli</h1>
 <h1>Tênis de Mesa</h1>
