--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
 <p>1º Lugar:Estevão (Aluno do Santos Dumont)</p>
 <p>2º Lugar:Leticia (Aluna do Santos Dumont)</p>         
 <p>3º Lugar:Matheus (Aluno da Ivaina) </p>   
- <img src="xadrez.png"  <img src="vencedores.jpg">  
+  <img src="vencedores.jpg">  
 
 <h1> Xadrez Mirim</h1>  
 
 <p> Não podiamos deixar de fora os ganhadores do Xadrez Mirim, siga a baixo a foto dos ganhadores.</p>
     <p>1º Lugar: Hiago (Aluno do Santos Dumont)</p>
     <p>2º Lugar: Geovana (Aluna do Santos Dumont)</p>
-    <p>3º Lugar: João Lucas ( Aluno do Santos Dumont)</p>                                           
+    <p>3º Lugar: João Lucas ( Aluno do Santos Dumont)</p>     
+    <img src="vencedoresmirim.jpg"                          
      
 
 
