--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<img src="Dumont_cropped.png">               <img src="logo 2.png">   <img src="civico.jpg"
+<img src="Dumont_cropped.png">               <img src="logo 2.png">   <img src="civico 2.jpg"
 
 <h1>Coluna Adryann Cruzarolli</h1>
 <h1>Colégio Cívico-Militar</h1>
