--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 
 <img src="Dumont_cropped.png">               <img src="logo 2.png">   <img src="civico 2.jpg"
+
+
 <h1>Coluna Adryann Cruzarolli</h1>
 <h1>Colégio Cívico-Militar</h1>
     
@@ -23,6 +25,17 @@
 
     <h1> Colégio Cívico Militar, o que é?</h1>
     
+    <p>A Equipe Gestora é composta por Direção-Geral, Direção Auxiliar e
+        Equipe Pedagógica da instituição de ensino.
+        No modelo federal, a Equipe de Militares é composta por um Oficial de
+        Gestão Escolar, um Oficial de Gestão Educacional e uma equipe de
+        Monitores.
+        No modelo estadual, a Equipe de Militares é composta por um Diretor
+        Cívico-Militar e uma equipe de Monitores.
+        As atribuições da equipe gestora estão especificadas no Regimento
+        Escolar dos Colégios Cívico-Militares.</p>
+
+        <p>Informção retirada do site OFICIAL do governo do estado do Paraná</p>
 
 
 
