--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<img src="Dumont_cropped.png">    <img src="logo 2.png">   <img src="civico 2.jpg"
+<img src="Dumont_cropped.png">    <img src="logo 2.png">  
 
  
 
