--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 
 
-<img src="Dumont_cropped.png">    <img src="logo 2.png">  
+<img src="Dumont_cropped.png">    <img src="logo 2.png">      <h1>Coluna Adryann Cruzarolli</h1>
 
  
 
-<h1>Coluna Adryann Cruzarolli</h1>
+
 
 <h1>Colégio Cívico-Militar</h1>
     
