--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 
 
-<img src="Dumont_cropped.png">    <img src="logo 2.png">      <h1>Coluna Adryann Cruzarolli</h1>
+<img src="Dumont_cropped.png">    <img src="logo 2.png">      
 
  
-
+<h1>Coluna Adryann Cruzarolli</h1>
 
 
 <h1>Colégio Cívico-Militar</h1>
@@ -39,7 +39,7 @@
 
         <p>Informção retirada do site OFICIAL do governo do estado do Paraná</p>
 
-
+<img src="https://www.aen.pr.gov.br/sites/default/arquivos_restritos/files/imagem/2022-03/_dsc1490_0.jpg">
     
 </body>
 </html>
