--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <p>Informção retirada do site OFICIAL do governo do estado do Paraná</p>
 
-
+<link rel="stylesheet" href="style.css">
     
 </body>
 </html>
