--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <h1>Colégio Cívico-Militar</h1>
     
-<p>23 de Novembro 2023</p>
+<p class="paragrafo "> 23 de Novembro 2023</p>
 
 <p>Rumores se espalham por toda o Colégio, perguntas do tipo "O Santos Dumont vai virar um Colégio Militar?" começam a surgir na cabeça de todos 
     os alunos, até alguns dias atrás niguém tinha a certeza se essa informação era apenas boatos, ou era realmente uma informação real, com esses rumores o diretor
@@ -39,6 +39,7 @@
 
         <p>Informção retirada do site OFICIAL do governo do estado do Paraná</p>
 
+    <p>29 de Novembro 2023</p>
 <link rel="stylesheet" href="style.css">
     
 </body>
