--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <h1>Colégio Cívico-Militar</h1>
     
-<p class="paragrafo "> 23 de Novembro 2023</p>
+<p class="paragrafo "> <strong>23 de Novembro 2023</strong> </p>
 
 <p>Rumores se espalham por toda o Colégio, perguntas do tipo "O Santos Dumont vai virar um Colégio Militar?" começam a surgir na cabeça de todos 
     os alunos, até alguns dias atrás niguém tinha a certeza se essa informação era apenas boatos, ou era realmente uma informação real, com esses rumores o diretor
