--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
         <p>Informção retirada do site OFICIAL do governo do estado do Paraná</p>
 
-    <p>29 de Novembro 2023</p>
+        <p class="paragrafo "> <strong>29 de Novembro 2023</strong> </p>
+
+        
 <link rel="stylesheet" href="style.css">
     
 </body>
