--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 
         <p>Informção retirada do site OFICIAL do governo do estado do Paraná</p>
 
-        <p class="paragrafo "> <strong>29 de Novembro 2023</strong> </p>
+        <p class="paragrafo "> <strong>30 de Novembro 2023</strong> </p>
+
+        Uma votação durante os dias 28 e 29 aconteceu no Colégio, com o objetivo de saber se iria ou não se aplicar o projeto de Colégio Cívico-Militar, os pais 
+        podiam votar, os alunos a partir de 16 anos também, a votação aconteceu do Colégio, mas para não atrapalhar
 
         
 <link rel="stylesheet" href="style.css">
