--- a/index.html
+++ b/index.html
@@ -42,7 +42,16 @@
         <p class="paragrafo "> <strong>30 de Novembro 2023</strong> </p>
 
         Uma votação durante os dias 28 e 29 aconteceu no Colégio, com o objetivo de saber se iria ou não se aplicar o projeto de Colégio Cívico-Militar, os pais 
-        podiam votar, os alunos a partir de 16 anos também, a votação aconteceu do Colégio, mas para não atrapalhar
+        podiam votar, os alunos a partir de 16 anos também, a votação aconteceu do Colégio, mas para não atrapalhar os alunos que estudam de manhã podem votar
+        apenas no horario em que não estiver estudando, dessa mesma forma não iria atrapalhar as aulas. O resultado das votações ja saaiu.
+        <p>Sim: 166</p>
+        <p>Não: 67</p>
+        <p>Brancos: 3</p>
+
+        <p>O modelo Cívico-Militar ganhou com mais de 100 votos como podemos ver, até o momento não sabemos ainda de nada, mas em breve o Colégio irá receber
+            mais informações do governo.
+        </p>
+    
 
         
 <link rel="stylesheet" href="style.css">
