--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <p>Siga abaixo algumas informações sobre o Colégio Cívico Militar:</p>
 
-    <h1> Colégio Cívico Militar, o que é?</h1>
+    <h1> Colégio Cívico-Militar, o que é?</h1>
     
     <p>A Equipe Gestora é composta por Direção-Geral, Direção Auxiliar e
         Equipe Pedagógica da instituição de ensino.
@@ -39,13 +39,15 @@
 
         <p>Informção retirada do site OFICIAL do governo do estado do Paraná</p>
 
+        <h1> Votação Cívico-Militar</h1>
+
         <p class="paragrafo "> <strong>30 de Novembro 2023</strong> </p>
 
         Uma votação durante os dias 28 e 29 aconteceu no Colégio, com o objetivo de saber se iria ou não se aplicar o projeto de Colégio Cívico-Militar, os pais 
         podiam votar, os alunos a partir de 16 anos também, a votação aconteceu do Colégio, mas para não atrapalhar os alunos que estudam de manhã podem votar
         apenas no horario em que não estiver estudando, dessa mesma forma não iria atrapalhar as aulas. O resultado das votações ja saaiu.
-        <p>Sim: 166</p>
-        <p>Não: 67</p>
+        <p <strong>Sim: 166</strong> </p>
+        <p strong>Não: 67</strong> </p>
         <p>Brancos: 3</p>
 
         <p>O modelo Cívico-Militar ganhou com mais de 100 votos como podemos ver, até o momento não sabemos ainda de nada, mas em breve o Colégio irá receber
