--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
         <p>O modelo Cívico-Militar ganhou com mais de 100 votos como podemos ver, até o momento não sabemos ainda de nada, mas em breve o Colégio irá receber
             mais informações do governo.
         </p>
-    
+      <section class="a"> <ul type="circle">
+        <li>Sim: 166</li>
+        <li>Não: 67</li>
+        <li>Brancos: 3</li>
+      </ul></section>
 
         
 <link rel="stylesheet" href="style.css">
