--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <img src="Dumont_cropped.png">    <img src="logo 2.png">      
 
  
-<h1>Coluna Adryann Cruzarolli</h1>
+<h2>Coluna Adryann Cruzarolli</h2>
 
 
 <h1>Colégio Cívico-Militar</h1>
@@ -44,7 +44,7 @@
         <p class="paragrafo "> <strong>30 de Novembro 2023</strong> </p>
 
         <p>Uma votação durante os dias 28 e 29 aconteceu no Colégio, com o objetivo de saber se iria ou não se aplicar o projeto de Colégio Cívico-Militar, os pais 
-        podiam votar, os alunos a partir de 16 anos também, a votação aconteceu do Colégio, mas para não atrapalhar os alunos que estudam de manhã podem votar
+        podiam votar, os alunos a partir de 16 anos também, a votação aconteceu do Colégio, mas para não atrapalhar os alunos que estudam de manhã eles podiam votar
         apenas no horario em que não estiver estudando, dessa mesma forma não iria atrapalhar as aulas. O resultado das votações ja saiu.</p>
         
 
