--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Coluna Cruzarolli</title>
 </head>
 <body>
-
+  <link rel="shortcut icon" type="imagex/png" logo-2.ico="./images/icon.ico">
 
 <img src="Dumont_cropped.png">    <img src="logo 2.png">      
 
