--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </ul></section>
 
 
-      <link rel="shortcut icon" type="imagex/png" href="./logobarra.ico">
+      <link rel="shortcut icon" type="imagex/png" href="./logobarra/icon.ico">
       <link rel="stylesheet" href="style.css">
     
 </body>
