--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
         <li>Brancos: 3</li>
       </ul></section>
 
-
+      <header>
       <link rel="shortcut icon" type="imagex/png" href="./logobarra/icon.ico">
+    </header>
       <link rel="stylesheet" href="style.css">
     
 </body>
