--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,9 +57,7 @@
         <li>Brancos: 3</li>
       </ul></section>
 
-      <header>
-      <link rel="shortcut icon" type="imagex/png" href="./logobarra/icon.ico">
-    </header>
+      <link rel="shortcut icon" href="logobarra/icon.ico" type="image/x-icon">
       <link rel="stylesheet" href="style.css">
     
 </body>
