--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <li>Brancos: 3</li>
       </ul></section>
 
-      <link rel="shortcut icon" href="logobarra/icon.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="logobarra.ico" type="image/x-icon">
       <link rel="stylesheet" href="style.css">
     
 </body>
