--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <li>Brancos: 3</li>
       </ul></section>
 
-      <link rel="shortcut icon" href="WhatsApp Image 2023-12-02 at 16.19.33.ico" type="image/x-icon">
+      <link rel="shortcut icon" href="ico/WhatsApp Image 2023-12-02 at 16.19.33.ico" type="image/x-icon">
       <link rel="stylesheet" href="style.css">
     
 </body>
