--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coluna Cruzarolli</title>
+    <link rel="shortcut icon" href="WhatsApp Image 2023-12-02 at 16.19.33.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -57,7 +58,7 @@
         <li>Brancos: 3</li>
       </ul></section>
 
-      <link rel="shortcut icon" href="ico/WhatsApp Image 2023-12-02 at 16.19.33.ico" type="image/x-icon">
+      
       <link rel="stylesheet" href="style.css">
     
 </body>
