--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coluna Cruzarolli</title>
-    <link rel="shortcut icon" href="WhatsApp-Image-2023-12-02-at-16.19.33-_1_.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="logo 2 (1).ico" type="image/x-icon">
 </head>
 <body>
 
