--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coluna Cruzarolli</title>
     <link rel="shortcut icon" href="logo 2 (1).ico" type="image/x-icon">
+    <link rel="stylesheet" href="Dumont news/">
+    <div class="a">Dumont News</div>
 </head>
 <body>
 
