--- a/Dumont news/botao.html
+++ b/Dumont news/botao.html
@@ -11,6 +11,6 @@
         Tênis de Mesa, até votação pra o modelo Militar, veja abaixo o site criado pelos aplicativos 
         GitHub e Vercel, trabalho da matéria de Pensamento Computacional, quem passou esse trabalho foi
          a professora Lilian Alexandre Pereira dos Santos.</p>
-
+         <link rel="stylesheet" href="style.css">
 </body>
 </html>
