--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
        <link rel="stylesheet" href="Dumont news/">
     <div class="a">Dumont News</div>
-    <button type="submit"><a target="_blank" href="Dumont news/botao.html"</a></button>
+    <button type="submit"><a target="_blank" href="Dumont news/"</a></button>
       <link rel="stylesheet" href="style.css">
     
 </body>
