--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
        <link rel="stylesheet" href="Dumont news/">
     <div class="a">Dumont News</div>
-   <a href="Dumont news/botao.html"</a>
+   <a href="https://colunacruzarolli.wordpress.com/"</a>
       <link rel="stylesheet" href="style.css">
     
 </body>
