--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
        <link rel="stylesheet" href="Dumont news/">
     <div class="a">Dumont News</div>
-   <a href="https://colunacruzarolli.wordpress.com/"input type="button" value="Dumont News"</a>
+   <a href="Dumont news/"input type="button" value="Dumont News"</a>
       <link rel="stylesheet" href="style.css">
            
 </body>
