--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 
-<img src="Dumont_cropped.png">    <img src="logo 2.png">      
+<img src="Dumont_cropped.png">    <img src="Colorful_Live_News_Free_Logo__1_-removebg-preview.png">      
 
  
 <h2>Coluna Adryann Cruzarolli</h2>
