--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<img src="Dumont_cropped.png">    <img src="Colorful_Live_News_Free_Logo__1_-removebg-preview (1).png">      
+<img src="Design sem nome (1) (1).png">    
 
 <h2>Coluna Adryann Cruzarolli</h2>
 
