--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
 <p class="paragrafo "> <strong>23 de Novembro 2023</strong> </p>
 
-<p>Rumores se espalham por toda o Colégio, perguntas do tipo "O Santos Dumont vai virar um Colégio Militar?" começam a surgir na cabeça de todos 
+<p>Rumores se espalham por todo o Colégio, perguntas do tipo "O Santos Dumont vai virar um Colégio Militar?" começam a surgir na cabeça de todos 
     os alunos, até alguns dias atrás niguém tinha a certeza se essa informação era apenas boatos, ou era realmente uma informação real, com esses rumores o diretor
     Ezidio Biasi desidiu tomar uma iniciativa de fazer uma reunião com todos os pais para explicar esses boatos que estavam circulando. Essa "sugestão" veio a partir
     do governo, até o momento esse projeto não foi aprovado.</p>
