--- a/paginas/index.html
+++ b/paginas/index.html
@@ -58,7 +58,7 @@
         <li>Não: 67</li>
         <li>Brancos: 3</li>
       </ul></section>
-
+           <a href="pagina.html">RETA FINAL</a>
        
       <link rel="stylesheet" href="style.css">
            
