--- a/pagina.html
+++ b/pagina.html
@@ -12,5 +12,25 @@
         </div>
         <h2>Coluna Adryann Cruzarolli</h2>
         
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <link rel="stylesheet" href="style.css">
 </body>
 </html>
