--- a/pagina.html
+++ b/pagina.html
@@ -33,9 +33,9 @@
 
 
 
-
+<div id="botao">
 <a href="index.html"> VOLTAR</a>
-
+</div>
         <link rel="stylesheet" href="style.css">
 </body>
 </html>
