--- a/pagina.html
+++ b/pagina.html
@@ -12,7 +12,7 @@
         </div>
         <h2>Coluna Adryann Cruzarolli</h2>
         
-<h1> Reta Final</h1>
+<h1> Se Liga</h1>
 
 <p> O ano se passou muito rápido, faltando apenas alguns dias para acabar as aulas, começa uma nova etapa, o famoso "Se Liga", conhecido popurlamente pelos
     professores como o levanta defunto, onde é retomado o conteúdo do decorrer do ano, todos os alunos são obrigados a fazer, mas nem todos comparecem a escola,
