--- a/pagina.html
+++ b/pagina.html
@@ -12,13 +12,22 @@
         </div>
         <h2>Coluna Adryann Cruzarolli</h2>
         
-<h1> Se Liga</h1>
+<h1> Se Liga!/h1>
 <p class="paragrafo "> <strong>09 de Dezembro 2023</strong> </p>
 <p> O ano se passou muito rápido, faltando apenas alguns dias para acabar as aulas, começa uma nova etapa, o famoso "Se Liga", conhecido popurlamente pelos
     professores como o levanta defunto, onde é retomado o conteúdo do decorrer do ano, todos os alunos são obrigados a fazer, mas nem todos comparecem a escola,
     o "Se Liga" funciona com o intuito de ajudar aqueles alunos que ficaram com notas baixas 
 </p>
+ <h1> Se Liga, O que é?</h1>
 
+ <p>O Se Liga! é uma ação de intensificação de aprendizagem voltada para a recuperação da aprendizagem.
+    Cada instituição de ensino tem autonomia para designar o professor que será alocado para as atividades
+     pedagógicas a serem desenvolvidas. A Secretaria de Estado da Educação (Seed-PR) acompanha a frequência
+      e a evolução de resultado dos alunos participantes. o Objetivo é desenvolver e aprimorar os conhecimentos 
+      essenciais necessários dos estudantes que apresentam dificuldades, para que eles adquiram os conhecimentos
+       referentes ao ano/série cursado.</p>
+
+       <p>Informações retiradas do site OFICIAL da Secretaria da Educação</p>
 
 
 
