--- a/pagina.html
+++ b/pagina.html
@@ -12,12 +12,14 @@
         </div>
         <h2>Coluna Adryann Cruzarolli</h2>
         
-<h1> Se Liga!/h1>
+<h1> Se Liga! </h1>
+
 <p class="paragrafo "> <strong>09 de Dezembro 2023</strong> </p>
+
 <p> O ano se passou muito rápido, faltando apenas alguns dias para acabar as aulas, começa uma nova etapa, o famoso "Se Liga", conhecido popurlamente pelos
     professores como o levanta defunto, onde é retomado o conteúdo do decorrer do ano, todos os alunos são obrigados a fazer, mas nem todos comparecem a escola,
-    o "Se Liga" funciona com o intuito de ajudar aqueles alunos que ficaram com notas baixas 
-</p>
+    o "Se Liga" funciona com o intuito de ajudar aqueles alunos que ficaram com notas baixas.</p>
+
  <h1> Se Liga, O que é?</h1>
 
  <p>O Se Liga! é uma ação de intensificação de aprendizagem voltada para a recuperação da aprendizagem.
