--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       essenciais necessários dos estudantes que apresentam dificuldades, para que eles adquiram os conhecimentos
        referentes ao ano/série cursado.</p>
 
-       <p>Informações retiradas do site OFICIAL da Secretaria da Educação</p>
+       <p>Informações retiradas do site OFICIAL da Secretaria da Educação.</p>
      
          
            <a href="pagina.html"> + NEWS</a>
