--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coluna Cruzarolli</title>
     <link rel="shortcut icon" href="logo 2 (1).ico" type="image/x-icon">
-   
+   <header> DUMONT NEWS</header>
 </head>
 <body>
 
-
+<meta viewport>
 <div id="dov">
 <img src="Design sem nome (1) (1).png">    
 </div>
