--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coluna Cruzarolli</title>
     <link rel="shortcut icon" href="logo 2 (1).ico" type="image/x-icon">
+    <div id="cabecalho">
    <header> DUMONT NEWS</header>
+</div>
 </head>
 <body>
 
