--- a/pagina.html
+++ b/pagina.html
@@ -7,9 +7,10 @@
     <link rel="shortcut icon" href="logo 2 (1).ico" type="image/x-icon">
 </head>
 <body>
-    <div id="dov">
-        <img src="Design sem nome (1) (1).png">    
-        </div>
+    <div id="cabecalho">
+        <header> DUMONT NEWS</header>
+     </div>
+     
         <h2>Coluna Adryann Cruzarolli</h2>
 
         <h1>Colégio Cívico-Militar</h1>
