--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <div id="cabecalho">
    <header> DUMONT NEWS</header>
 </div>
+<div id="rodape">
+<footer> Coluna Adryann Cruzarolli</footer>
+</div>
 </head>
 <body>
 
