--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 </head>
 <body>
 
+<h1>Despedida</h1>
 
+<p class="paragrafo "> <strong> 13 de Dezembro 2023</strong> </p>
 
+<p></p>
 
 <h1> Se Liga! </h1>
 
