--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
 <p class="paragrafo "> <strong> 13 de Dezembro 2023</strong> </p>
 
-<p></p>
+<p>As aulas estão prestes a acabar, mas não poderia deixar passar batido, a professora Lilian Alexandre junto com os alunos do 1° e 2° ano 
+    irão fazer uma pequena despedida Sexta-Feira, por mais que seja um pequeno ou grande "alívio" podemos dizer que po um período de tempo, durante as férias,
+    vamos sentir falta, da escola ou dos professores. Por mais que pareça algo de outro mundo um aluno sentir falta de um professor, muitas das vezes o aluno
+    se sente mais a vontade na escola do que em casa. </p>
 
 <h1> Se Liga! </h1>
 
