--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 </head>
 <body>
 
+
+    <h1>Até 2024</h1>
+
+    <p class="paragrafo "> <strong> 15 de Dezembro 2023</strong> </p>
+
+    <p>Sexta-Feira chegou, a pequena despedida aconteceu, o que podemos dizer sobre? Teve vários salgados, refrigerantes e bolo, se não fosse a professora Lilian nada 
+        teria acontecido. A partir dessa atualização sobre os acontecimentos do Colégio, eu venho dizer o quanto a Lilian é importante para todos nós, acredito que no 
+        começo deve ter sido bem difícil para ela, Até porque ela começou a dar aula para nós (1° ano) na pandemia, onde muito dos alunos nem se quer participavam das 
+        aulas online, mas a Lilian não desistiu, tem uma família linda, sei que em um site escolar não podemos dar nossas opiniões, mas esse é um momento importante, 
+        não sei se o ano que vem eu vou estar aqui novamente, pretendo muito ficar, até porque, esse site tem muito o que evoluir, e você professora, vai me ajudar. Até 2024.
+    </p>
 <h1>Despedida</h1>
 
 <p class="paragrafo "> <strong> 13 de Dezembro 2023</strong> </p>
