--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Coluna Cruzarolli</title>
     <link rel="shortcut icon" href="logo 2 (1).ico" type="image/x-icon">
     <div id="cabecalho">
-        <h1> <img src="Design sem nome (1) (1).png" alt="teste"></h1>
+        <h1> <img src="Design_sem_nome-removebg-preview.png" alt="teste"></h1>
    <header> DUMONT NEWS</header>
 </div>
 <div id="rodape">
