--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 <body>
 
 
+   <h1>Adiós</h1>
+
+   <p class="paragrafo"><strong>  15 de Fevereiro </strong></p>
+    
+   <p> "E a vida vai ser boa e linda, mas não sem um coração partido" a definição para o adeus ao Santos Dumont, 
+    saudades Lilian, professora incrivel que me ajudou demais na criação desse site, que super abraçou a minha ideia
+    de criar um jornal pra escola, infelizmente não estou mais lá, mas o basico que sei sobre programação aprendi com a Lilian, 
+    acho que fui o unico aluno a ficar estressado por não sabe criar um botão para acessar um outra página, talvez aqui não tenha mais a continuação desse site, 
+    mas não significa que vou parar com a progamção de site, dras corp é a prova viva disso.
+   </p>
+
+   <link href="https://drascorp.vercel.app/"
     <h1>Até 2024</h1>
 
     <p class="paragrafo "> <strong> 15 de Dezembro 2023</strong> </p>
@@ -26,6 +38,8 @@
         aulas online, mas a Lilian não desistiu, tem uma família linda, sei que em um site escolar não podemos dar nossas opiniões, mas esse é um momento importante, 
         não sei se o ano que vem eu vou estar aqui novamente, pretendo muito ficar, até porque, esse site tem muito o que evoluir, e você professora, vai me ajudar. Até 2024.
     </p>
+
+   
 <h1>Despedida</h1>
 
 <p class="paragrafo "> <strong> 13 de Dezembro 2023</strong> </p>
