--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             padding: 0;
         }
         #cabecalho {
-            background-color: #fff;
-            color: #333;
+            background-color: #007bff;
+            color: #fff;
             text-align: center;
             padding: 10px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -30,7 +30,7 @@
             font-style: italic;
             text-align: center;
             padding: 10px;
-            background-color: #333;
+            background-color: #343a40;
             color: #fff;
         }
         h1 {
